feat: improve Cache interface
  - implement new methods on InMemory and Hazelcast cache implementation